[package]
name = "clunk_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "mod.rs"

[dependencies.clunk_error]
path = "../error"

[dependencies]
mlua = { version = "0.9.9", features = ["lua54", "macros", "serialize", "vendored"] }
proc-macro2 = "^1.0.95"
quote = "1.0.37"
syn = "2.0.85"
